Revise README with project overview and features
Updated README to include project details and functionalities.